header and hero landing page

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -275,6 +275,11 @@
   .date-picker {
     @apply overflow-hidden border-transparent w-full placeholder:text-dark-600  h-11 text-14-medium rounded-md px-3 outline-none !important;
   }
+
+  /* ===== Landing page logo */
+  .logo-ticker-image{
+    @apply h-8 w-auto fill-white;
+  }
 }
 
 /* =====  REACT-DATEPICKER OVERRIDES */
